syntax = "proto3";
package protobuf;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}
message CreateUserResponse {
    string user_id = 1;
}